--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Honeybuns Clicker</title>
   </head>
+  <script src="script.js" charset="utf-8" type="text/javascript"></script>
   <body>
     <p id="buns">0 honeybuns</p>
     <button onclick="click()">click the honeybuns!</button>
-    <script src="game.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
